--- a/renderer/styles/globals.css
+++ b/renderer/styles/globals.css
@@ -85,3 +85,9 @@ table, th, td {
   border: 1px solid hsl(var(--border));
   border-collapse: collapse;
 }
+
+.print-table {
+  th, td, tr {
+    border: 0.5px solid black;
+  }
+}
